--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -23,9 +23,12 @@
     編集日時 :
     <%= blog.updated_at %>
     <br>
+    <!--記事編集へのリンク-->
+    <%= link_to "[編集]", edit_blog_path(blog.id) %>
+    
     <!--記事削除へのリンク-->
     <%= link_to "[削除]", blog_path(blog.id),method: :delete, data:
-	{confirm: "are you sure?"} %>
+	{confirm: "記事を削除してもよろしいですか。"} %>
   </li>
   <% end %>
 </u1>
