--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,12 +1,6 @@
 <!--記事編集ページ-->
 
-<!--
-    本文
-    内容
-    投稿ボタン
-    投稿キャンセルボタン <-予定
-    を作成
--->
-<h1>新規記事投稿</h1>
-
+<!--記事編集フォームは新規投稿と同じものを使用する。 -->
+<h1>記事編集</h1>
+<% @label = "編集" %>
 <%= render 'form' %>
