--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,17 +1,7 @@
 <!--新規投稿ページ-->
 
-<!--
-    記事を投稿するためのページ
-    本文
-    内容
-    投稿ボタン
-    投稿キャンセルボタン <-予定
-    を作成
-  -->
 
-<h1>新規記事投稿</h1>
 
-<%= render 'form'%>
-<% if @blog.errors.any? %>
-<%= @blog.errors.messages[:title][0] %>
-<% end %>
+<h1>新規投稿</h1>
+<% @label = "新規投稿" %>
+<%= render 'form' %>
