--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,16 +1,17 @@
-<!--記事の全文を表示するページ-->
+<!--記事のタイトルと本文の全文を表示するページ-->
 
-
+タイトル:
 <%=@blog.title%><br>
 
 <%= simple_format(@blog.main) %>
 <br>
+
+<!--投稿及び変更日時の表示-->
 投稿日時 :
 <%= @blog.created_at %>
+
 編集日時 :
 <%= @blog.updated_at %>
-<br>
-
 
 <!--記事編集へのリンク-->
 <%= link_to "[編集]", edit_blog_path(@blog.id) %>
@@ -18,3 +19,5 @@
 <!--記事削除へのリンク-->
 <%= link_to "[削除]", blog_path(@blog.id),method: :delete, data:
     {confirm: "記事を削除してもよろしいですか。"} %>
+<br>
+<br>
